--- a/.pylintrc
+++ b/.pylintrc
@@ -3,3 +3,4 @@ disable = missing-module-docstring, missing-class-docstring, missing-function-do
 
 [SIMILARITIES]
 ignore-imports=yes
+min-similarity-lines=6
